# libToolDAQ

./: .gitignore  CMakeLists.txt  README.md
ToolDAQFramework/: CMakeLists.txt
ToolFrameworkCore/: CMakeLists.txt
cmake/: FindDependencies.cmake  StripUtils.cmake  merge_static_libs.sh  toolchain-aarch64-linux-gnu.cmake  toolchain-arm-linux-gnueabihf.cmake
libDAQInterface/: CMakeLists.txt
libDAQInterface/patches/: 0001-add-cstdint-to-DAQHeader.patch
