cmake_minimum_required(VERSION 3.11)   # required by FetchContent (used in ToolFrameworkCore)
project(libToolDAQ CXX)

# --- Local CMake modules ----------------------------------------------------
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(FindDependencies)
include(StripUtils)

# --- External dependency detection (ZeroMQ, Boost) --------------------------
# Done ONCE here: both ToolFrameworkCore and ToolDAQFramework, added below
# with add_subdirectory(), automatically inherit these variables/targets
# (ZeroMQ_FOUND, ZMQ_INCLUDE_DIRS, ZMQ_LIBRARIES, ToolFramework::ZeroMQ,
# Boost_FOUND, Boost_INCLUDE_DIRS, Boost_LIBRARIES) without having to search
# for them in each subproject.
find_zeromq()
find_boost_dependencies()

if(ZeroMQ_FOUND)
    message(STATUS "ZeroMQ found: include=${ZMQ_INCLUDE_DIRS} lib=${ZMQ_LIBRARIES}")
endif()
if(Boost_FOUND)
    message(STATUS "Boost found: include=${Boost_INCLUDE_DIRS} lib=${Boost_LIBRARIES}")
endif()

# --- Build ToolFrameworkCore -------------------------------------------------
# ToolFrameworkCore has its own CMakeLists.txt (clones the real sources with
# FetchContent, builds the libraries from src/, DataModel/ and UserTools/).
# Here we simply hook it in as a subproject.
add_subdirectory(ToolFrameworkCore)

# --- Build ToolDAQFramework ---------------------------------------------------
# ToolDAQFramework depends on ToolFrameworkCore (uses its headers/libraries),
# so it must be added AFTER it in the add_subdirectory order.
add_subdirectory(ToolDAQFramework)

# --- Build libDAQInterface -----------------------------------------------------
# libDAQInterface depends on both ToolFrameworkCore and ToolDAQFramework,
# so it must be added LAST.
add_subdirectory(libDAQInterface)

# =============================================================================
# --- Combined library libToolDAQ.so / libToolDAQ.a --------------------------
# Aggregates ALL libraries generated by the three subprojects
# (ToolFrameworkCore, ToolDAQFramework, libDAQInterface) into a single
# shared library and a single static library, both under build/lib.
# =============================================================================

# List of all "base names" of the libraries generated so far (without the
# _static suffix): TFC_ALL_LIBS and TDF_ALL_LIBS were exported by their
# respective CMakeLists.txt; DAQInterface is a single target.
set(TOOLDAQ_ALL_LIBS ${TFC_ALL_LIBS} ${TDF_ALL_LIBS} DAQInterface)

# --- libToolDAQ.so: "whole-archive" merge of all static libraries ---------
# This is not a plain "link" (which would only pull in symbols that are
# actually referenced): -Wl,--whole-archive forces the linker to include
# EVERY object file from every static library, producing a self-contained
# .so with all the code, without depending at runtime on the individual
# libStore.so, etc.
set(TOOLDAQ_STATIC_TARGETS "")
set(TOOLDAQ_STATIC_FILES "")
foreach(_lib ${TOOLDAQ_ALL_LIBS})
    if(TARGET ${_lib}_static)
        list(APPEND TOOLDAQ_STATIC_TARGETS ${_lib}_static)
        list(APPEND TOOLDAQ_STATIC_FILES $<TARGET_FILE:${_lib}_static>)
    else()
        message(WARNING "libToolDAQ: target '${_lib}_static' not found, excluded from the merge")
    endif()
endforeach()

# add_library(SHARED) requires at least one source: we generate an empty one,
# since the real content all comes from the merged static libraries.
set(_TOOLDAQ_DUMMY_SRC ${CMAKE_BINARY_DIR}/toolDAQ_combined_dummy.cpp)
file(WRITE ${_TOOLDAQ_DUMMY_SRC}
    "// Empty file: libToolDAQ.so only aggregates external libraries via whole-archive.\n")

add_library(ToolDAQ SHARED ${_TOOLDAQ_DUMMY_SRC})
set_target_properties(ToolDAQ PROPERTIES
    OUTPUT_NAME             ToolDAQ
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
)
target_link_libraries(ToolDAQ PRIVATE
    -Wl,--whole-archive
    ${TOOLDAQ_STATIC_FILES}
    -Wl,--no-whole-archive
    ${Boost_LIBRARIES}
    pthread
)
if(TARGET ToolFramework::ZeroMQ)
    target_link_libraries(ToolDAQ PRIVATE ToolFramework::ZeroMQ)
endif()
add_dependencies(ToolDAQ ${TOOLDAQ_STATIC_TARGETS})
strip_target(ToolDAQ)

# --- libToolDAQ.a: "physical" (ar) merge of all static libraries ----------
# CMake has no native way to merge several .a libraries into one, so we use
# a script that extracts the objects of each archive (into separate
# subfolders, to avoid collisions between identically named .o files) and
# reassembles them into a single archive with "ar".
# Build the list of COMMANDs conditionally: the strip step is only added
# if CMAKE_STRIP is actually available (evaluated at configure time, since
# CMAKE_STRIP doesn't vary per-config).
set(_TOOLDAQ_MERGE_COMMANDS
    COMMAND bash ${CMAKE_SOURCE_DIR}/cmake/merge_static_libs.sh
            ${CMAKE_AR}
            ${CMAKE_BINARY_DIR}/toolDAQ_merge_objs
            ${CMAKE_BINARY_DIR}/lib/libToolDAQ.a
            ${TOOLDAQ_STATIC_FILES}
)
if(CMAKE_STRIP)
    list(APPEND _TOOLDAQ_MERGE_COMMANDS
        COMMAND ${CMAKE_STRIP} --strip-debug ${CMAKE_BINARY_DIR}/lib/libToolDAQ.a
    )
endif()

add_custom_command(
    OUTPUT ${CMAKE_BINARY_DIR}/lib/libToolDAQ.a
    ${_TOOLDAQ_MERGE_COMMANDS}
    DEPENDS ${TOOLDAQ_STATIC_TARGETS}
    COMMENT "Merging all static libraries into libToolDAQ.a (and stripping debug info)"
    VERBATIM
)
add_custom_target(ToolDAQ_static ALL DEPENDS ${CMAKE_BINARY_DIR}/lib/libToolDAQ.a)

message(STATUS "libToolDAQ: libraries merged into libToolDAQ.so / libToolDAQ.a: ${TOOLDAQ_ALL_LIBS}")
